=======================================================================
VERSION 0.2.8
=======================================================================

21-07-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * src/mrview/sidebar/overlay.h:
    * src/mrview/sidebar/overlay.cpp:
    * src/mrview/sidebar/main.h:
    * src/mrview/sidebar/main.cpp:
      added new overlay sidebar tool


16-07-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/file/dicom/image.cpp:
      check for readable data in GE private DW tags before assigning

    * lib/file/dicom/element.cpp:
      fix bug in handling of big-endian files


15-07-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * build: 
      fix to allow the use of symbolic links (problem identified by Rob
      Smith)

    * Doxyfile: version number upped to 0.2.9

    * lib/mrtrix.h: MRTRIX_MICRO_VERSION upped to 9



=======================================================================
VERSION 0.2.8
=======================================================================

15-03-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/mrtrix.h:
    * lib/file/dicom/tree.cpp:
      add shorten() function to reduce long filenames 


12-03-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * src/mrview/sidebar/tractography/track_list.h:
    * src/mrview/sidebar/tractography/track_list.cpp:
    * src/mrview/sidebar/tractography/track_list_item.h:
    * src/mrview/sidebar/tractography/track_list_item.cpp:
      a few bug fixes for the colour handling and support for depth blend on
      64 bit systems
    
04-03-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * src/mrview/scaling.h: 
      fix automatic windowing in the presence of infinite or NaN voxel values.

03-03-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/normalise_tracks.cpp: 
      skip points in the tracks file if they are outside the supplied warp

    * cmd/streamtrack.cpp:
    * src/dwi/tractography/tracker/base.h: